data/all_generated_tests/raw_wast_tests/loop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1204.wast
;; 5. **Test 5**:    - Description: Construct a loop that re-invokes the calling function through an exported function after a looping backward branch, verifying the operand stack’s consistency.    - Specific Constraint: Ensures the operand stack is correctly unwound and reconstructed during re-entrant function calls.    - Control Flow Relation: Checks for stack consistency in re-entrant function calls across module boundaries.

(assert_invalid
  (module
    (func $loop_reentry
      (i32.const 1)
      (loop $label (param i32)
        (call $reentry)
        (br $label)
      )
    )
    (func (export "reentry") (param i32)
      (i32.const 0)
      (drop)
    )
  )
  "operand stack mismatch"
)